2011-10-07  Martin Robinson  <mrobinson@igalia.com>

        [Freetype] Pseudo-italics do not work
        https://bugs.webkit.org/show_bug.cgi?id=40856

        Reviewed by Philippe Normand.

        Add test results which show this test passing now.

        * platform/gtk/Skipped: Unskip a passing test.
        * platform/gtk/fast/text/fake-italic-expected.png: Added.
        * platform/gtk/fast/text/fake-italic-expected.txt: Added.

2011-10-07  Qi Zhang  <qi.2.zhang@nokia.com>

        [Qt][WK2] ApplicationCache LayoutTests failed
        https://bugs.webkit.org/show_bug.cgi?id=69541

        Reviewed by Chang Shu.

        Unskip passed tests.

        * platform/qt-wk2/Skipped:

2011-10-07  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip failing svg test in GTK.

        * platform/gtk/Skipped: Skip svg/filters/feColorMatrix-saturate.svg

2011-10-07  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip http/tests/multipart/load-last-non-html-frame.php in GTK.

        * platform/gtk/Skipped:

2011-10-07  Zoltan Horvath  <zoltan@webkit.org>

        [Qt] http/tests/multipart/load-last-non-html-frame.php is failing
        https://bugs.webkit.org/show_bug.cgi?id=69615

        Ossyize failing test.

        * platform/qt/Skipped:

2011-10-07  Mario Sanchez Prada  <msanchez@igalia.com>

        [GTK] Don't expose objects with unknown role on GTK
        https://bugs.webkit.org/show_bug.cgi?id=69561

        Reviewed by Chris Fleizach.

        New test to check that unknown objects are not exposed in GTK.

        * platform/gtk/accessibility/unknown-roles-not-exposed-expected.txt: Added.
        * platform/gtk/accessibility/unknown-roles-not-exposed.html: Added.

        Added new expectation for new accessibility layout test introduced
        in r96127 that was not possible to add before because of this bug.

        * platform/gtk/accessibility/deleting-iframe-destroys-axcache-expected.txt: Added.
