@@ -1,0 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    div {
+      width: 100px;
+      height: 100px;
+      color: green;
+      background-color: blue;
+      box-shadow: 20px 20px red;
+      box-shadow: 20px 20px currentColor;
+    }
+  </style>
+<script>
+if (window.layoutTestController)
+    window.layoutTestController.dumpAsText(true);
+</script>
+</head>
+<body>
+  <div/>
+</body>
+</html>
