@@ -1,3 +1,15 @@
+2011-10-07  David Barr  <davidbarr@chromium.org>
+
+        Implement currentColor support for box-shadow and text-shadow
+        https://bugs.webkit.org/show_bug.cgi?id=68218
+
+        Reviewed by Simon Fraser.
+
+        Test: fast/box-shadow/box-shadow-currentcolor.html
+
+        * css/CSSParser.cpp:
+        (WebCore::CSSParser::parseShadow): Add CSSValueCurrentcolor to supported keywords.
+
 2011-10-07  Pavel Feldman  <pfeldman@google.com>
 
         Web Inspector: add Audits panel to the compilation.
