@@ -1,3 +1,14 @@
+2011-10-07  David Barr  <davidbarr@google.com>
+
+        Implement currentColor support for box-shadow and text-shadow
+        https://bugs.webkit.org/show_bug.cgi?id=68218
+
+        Reviewed by Simon Fraser.
+
+        * fast/box-shadow/box-shadow-currentcolor-expected.png: Added.
+        * fast/box-shadow/box-shadow-currentcolor-expected.txt: Added.
+        * fast/box-shadow/box-shadow-currentcolor.html: Added.
+
 2011-10-07  Martin Robinson  <mrobinson@igalia.com>
 
         [Freetype] Pseudo-italics do not work
